--- a/HTMLChild/A1.html
+++ b/HTMLChild/A1.html
@@ -14,7 +14,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<img src="./images/orglogo.jpg" alt="شِعَارُ مُؤَسَّسَةُ زَايِدٍ الْعُلْيَا لِأَصْحَابِ الْهِمَمِ">
+			<img src="Images/orglogo.jpg" alt="شِعَارُ مُؤَسَّسَةُ زَايِدٍ الْعُلْيَا لِأَصْحَابِ الْهِمَمِ">
 		</div>
 	</header>
 
@@ -24,7 +24,7 @@
 
 	<div class="book-info-container">
 		<div class="book-image">
-			<img src="./images/A1.png" alt="قِصَّةُ أَبِي الْكَنَارِيُّ الْكَبِيرُ">
+			<img src="Images/A1.png" alt="قِصَّةُ أَبِي الْكَنَارِيُّ الْكَبِيرُ">
 		</div>
 		<div class="book-details">
 			<p>فكّرْتُ هذا الأسبوعَ أنْ أقتنيَ طائرًا من حديقَتِنا وأتّخِذَهُ صَديقًا، لكنّي لمْ أُجرِّبْ بَعدُ الاعتناءَ بالحيوانات، <br aria-hidden="true">ولم أعتد على وُجودِها مَعي.
