--- a/Publications.html
+++ b/Publications.html
@@ -198,24 +198,24 @@ footer {
   <body>
 <header>
   <div class="logo">
-    <img src="HTMLChild/images/orglogo.jpg" alt="شِعَارُ مُؤَسَّسَةُ زَايِدٍ الْعُلْيَا لِأَصْحَابِ الْهِمَمِ">
+    <img src="HTMLChild/Images/orglogo.jpg" alt="شِعَارُ مُؤَسَّسَةُ زَايِدٍ الْعُلْيَا لِأَصْحَابِ الْهِمَمِ">
   </div>
 </header>
 
 	<h1>
-  		<img src="HTMLChild/images/projectlogo.jpg" alt="إِهْداءٌ لِأَنَامِلَ تَقْرَأُ"><br>
+  		<img src="HTMLChild/Images/projectlogo.jpg" alt="إِهْداءٌ لِأَنَامِلَ تَقْرَأُ"><br>
 		50 إصداراً بطريقة برايل</h1>
 
     <div class="grid-container">
       <div class="grid-item">
         <a href="HTMLChild/A1.html">
-          <img src="HTMLChild/images/A1.png" alt="قِصَّةُ أَبِي الْكَنَارِيُّ الْكَبِيرُ">
+          <img src="HTMLChild/Images/A1.png" alt="قِصَّةُ أَبِي الْكَنَارِيُّ الْكَبِيرُ">
         </a>
       </div>
 
       <div class="grid-item">
         <a href="HTMLChild/A2.html">
-          <img src="HTMLChild/images/A2.png" alt="قِصَّةُ حُلْمُ شُجَاعٍ">
+          <img src="HTMLChild/Images/A2.png" alt="قِصَّةُ حُلْمُ شُجَاعٍ">
         </a>
       </div>
 
@@ -228,13 +228,13 @@ footer {
 	 <div class="footer-left">
 	 <h2>قنوات التواصل:</h2>
 	  <div class="social-icons">
-	  <a href="tel:+97123056666"><img src="HTMLChild/images/tel.jpg" alt="الهاتف"></a>
-	  <a href="mailto:info@zho.gov.ae"><img src="HTMLChild/images/mail.jpg" alt="البريد الإلكتروني"></a>
-      <a href="https://twitter.com/zhocare"><img src="HTMLChild/images/tw.jpg" alt="Twitter"></a>
-      <a href="https://www.facebook.com/zhocare"><img src="HTMLChild/images/fb.jpg" alt="facebook"></a>
-	  <a href="https://www.linkedin.com/company/zhocare"><img src="HTMLChild/images/in.jpg" alt="linkedin"></a>
-	  <a href="https://www.instagram.com/zhocare"><img src="HTMLChild/images/insta.jpg" alt="instagram"></a>
-	  <a href="https://www.youtube.com/@mediazho"><img src="HTMLChild/images/yt.jpg" alt="YouTube"></a>
+	  <a href="tel:+97123056666"><img src="HTMLChild/Images/tel.jpg" alt="الهاتف"></a>
+	  <a href="mailto:info@zho.gov.ae"><img src="HTMLChild/Images/mail.jpg" alt="البريد الإلكتروني"></a>
+      <a href="https://twitter.com/zhocare"><img src="HTMLChild/Images/tw.jpg" alt="Twitter"></a>
+      <a href="https://www.facebook.com/zhocare"><img src="HTMLChild/Images/fb.jpg" alt="facebook"></a>
+	  <a href="https://www.linkedin.com/company/zhocare"><img src="HTMLChild/Images/in.jpg" alt="linkedin"></a>
+	  <a href="https://www.instagram.com/zhocare"><img src="HTMLChild/Images/insta.jpg" alt="instagram"></a>
+	  <a href="https://www.youtube.com/@mediazho"><img src="HTMLChild/Images/yt.jpg" alt="YouTube"></a>
 
     </div>
   </div>
